<resources>
    <string name="app_name">EnglishGrammarTest</string>
    <string name="past">Past</string>
    <string name="past_simple">Past Simple</string>
    <string name="past_continuous">Past Continuous</string>
    <string name="past_perfect">Past Perfect</string>
    <string name="present">Present</string>
    <string name="present_simple">Present Simple</string>
    <string name="present_continuous">Present Continuous</string>
    <string name="present_perfect">Present Perfect</string>
    <string name="future">Future</string>
    <string name="future_simple">Future Simple</string>
    <string name="future_continuous">Future Continuous</string>
    <string name="future_perfect">Future Perfect</string>
    <string name="past_indefinite">Past Simple (Past Indefinite) –
        простий неозначений час в англійській мові,
        що найчастіше використовується для позначення дії
        котра відбувалася в минулому і вже є завершеною.</string>
    <string name="past_zero">У стверджувальному реченні Past Simple
        утворюється за допомогою додавання до дієслів закінчення -ed
        або ж використання їхньої другої форми , якщо дієслово
        є неправильним. Для знаходження другої форми дієслова
        користуйтеся таблицею неправильних дієслів.\n\n
    Стверджувальне (розповідне) речення з використанням Past Simple:</string>
    <string name="past_ed">I play<b>ed</b> football yesterday. – Я грав у футбол вчора (дія завершена ще вчора).\n

I <b>thought</b> about that. – Я думав про це (дія завершена).\n</string>
    <string name="past_next">Заперечне речення утворюється за допомогою дієслова did
        (2 форма дієслова do) та додавання після нього частки not.
        При цьому did та not можна злити в одне слово didn’t.Формула:\n</string>
    <string name="past_did"><u>Іменник + did + not + дієслово\n</u></string>
    <string name="past_did_next">\tПриклад заперечного речення:\n

I did not play with my dog yeasterday. – Я не грав зі своєю собакою учора.\n

I didn’t smoke five years ago. – Я не курив п’ять років тому назад.\n</string>
    <string name="past_q">Для створення питального речення у Past Simple необхідно користуватися наступною формулою:\n</string>
    <string name="past_qdid"><u>Did + іменник + дієслово\n</u></string>
    <string name="past_qdidq">Приклад питального речення:\n
    <b>Did</b> you <b>play</b> football yesterday? – Ти грав у футбол вчора?\n
    <b>Did</b> you <b>go</b> to the cinema five days ago? – Ти ходив у кінотеатр п’ять днів тому?\n</string>
    <string name="word_pointers_past_simple">\nСлова-покажчики Past Simple\n</string>
    <string name="word_pointers_past_simple_next">\tЗ Past Simple часто вживаються допоміжні слова,
        що дозволяють легше відрізняти простий неозначений час. Є такі слова-покажчики:</string>
    <string name="word">Слово</string>
    <string name="translate">Переклад</string>
    <string name="yesterdayen">yesterday</string>
    <string name="yesterdayua">Вчора</string>
    <string name="the_day_before_yesterdayen">the day before yesterday</string>
    <string name="the_day_before_yesterdayua">позавчора</string>
    <string name="day_agoen">(three days, five days, five years…) ago</string>
    <string name="day_agoua">три дні тому, п’ять днів тому, п’ять років тому і т.д.</string>
    <string name="last_weekenden">last (week, month, year, weekend…)</string>
    <string name="last_weekendua">на минулому тижні, у минулому місяці, у минулому році і т.д.</string>
    <string name="in_1999en">in (1999, 2010, June, April…)</string>
    <string name="in_1999ua">у 1999, у 2010, у червні, у квітні і т.д.</string>
    <string name="when_en">when…</string>
    <string name="when_ua">коли….</string>
    <string name="go_to_the_study">Перейти до вивчення</string>
    <string name="past_continuous_indefinet">Past Continuous – минулий тривалий час англійської мови.
        Використовується для вказування на процес, що відбувався деякий час в минулому, при цьому має
        бути точно вказаний час, коли відбувалася дія або ж це має бути зрозумілим з контексту речення.
        Нижче розглянуто правила утворення часу Past Continuous в стверджувальному, заперечному та
        питальному реченнях, допоміжні слова та приклади його використання.\n\n
   \t\t\t\t\t\t\tУтворення Past Continuous\n</string>

    <string name="btnnext">Перейти до практики</string>
</resources>
