<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tvPast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/type"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/past"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llPastGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/past_simple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/past_continuous"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/past_perfect"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvPresent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/type"
        android:gravity="center"
        android:layout_margin="@dimen/type"
        android:text="@string/present"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llPresentGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/present_simple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/present_continuous"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/present_perfect"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvFuture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/type"
        android:layout_margin="@dimen/type"
        android:gravity="center"
        android:text="@string/future"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llFutureGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/future_simple"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/future_continuous"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/subparagraph"
            android:text="@string/future_perfect"/>
    </LinearLayout>
</LinearLayout>
